<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img_backg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo" />
        <TextView
            android:gravity="center"
            android:id="@+id/txtWelcome"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSignUp"
            android:background="@android:color/transparent"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:text="@string/signup"
            android:textSize="20dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSignIn"
            android:background="@android:color/transparent"
            android:text="@string/signin"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_width="190dp"
            android:layout_height="60dp" />
    </LinearLayout>



</RelativeLayout>