<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img_backg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edEmail"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="student@nci.ie"
            android:hint="@string/email"
            android:textColorHint="@android:color/white"
            android:inputType="textEmailAddress"
            android:textSize="20dp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="30"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edPw"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:text="1234"
            android:inputType="textPassword"
            android:textSize="20dp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="370dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:textSize="20dp"
            android:text="@string/signin"
            android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>